# gba-plus

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: main.rs
mobile/: Cargo.toml  build-rust.sh  build.rs  compile.sh  gba-emu.sh
mobile/src/: lib.rs
src/: cartridge.rs  cpu.rs  lib.rs  scheduler.rs
src/apu/: dma_fifo.rs  mod.rs
src/apu/registers/: mod.rs  sound_control_dma.rs  sound_control_enable.rs  sweep_control_frequency.rs
src/cartridge/: backup_file.rs  eeprom_controller.rs  flash.rs
src/cpu/: arm_instructions.rs  arm_opcodes.rs  bus.rs  cycle_lookup_tables.rs  rotations_shifts.rs  thumb_instructions.rs  thumb_opcodes.rs
src/cpu/apu/: dma_fifo.rs  mod.rs
src/cpu/dma/: dma_channel.rs  dma_channels.rs
src/cpu/registers/: interrupt_enable_register.rs  interrupt_request_register.rs  key_input_register.rs  mod.rs  waitstate_control_register.rs
src/cpu/timers/: mod.rs  timer.rs
src/gpu/: mod.rs  mode_rendering.rs  picture.rs  pixel_processing.rs  rendering.rs
src/gpu/registers/: alpha_blend_register.rs  bg_control_register.rs  brightness_register.rs  display_control_register.rs  display_status_register.rs  mod.rs  window_horizontal_register.rs  window_in_register.rs  window_vertical_register.rs
wasm/: Cargo.toml  index.html  styles.css
wasm/app/: index.html  index.ts  package-lock.json  package.json
wasm/app/bios/: gba_bios.txt
wasm/app/src/: audio_manager.ts  ui.ts  (+5 more)
wasm/pkg/: gba_emulator_wasm.d.ts  gba_emulator_wasm.js  gba_emulator_wasm_bg.wasm  gba_emulator_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
(+5 files in other folders)
