[package]
name = "gba-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.3.1", features = ["serde"] }
strum = "0.25"
strum_macros = "0.25"
priority-queue = "1.0.5"
num = "0.4.3"
bincode = "1.2.1"
ringbuf="0.4.8"
serde = { version = "1.0", features = ["derive", "rc"] }